wayland: DrmLeaseDevice, use Q_OBJECT macro

BUG: 483008
(cherry picked from commit aa465efa5178c240059f6d974440cfb85bea99d2)